configs/external/main-site/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-site
  labels:
    app.kubernetes.io/name: main-site
    app.kubernetes.io/instance: main-site
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: main-site
    app.kubernetes.io/instance: main-site
