configs/external/main-site/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: main-site
  labels:
    app.kubernetes.io/name: main-site
    app.kubernetes.io/instance: main-site
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - burrell.tech
    - www.burrell.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: main-site
          port: 80

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: main-site-redirect
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - burrell.tech
    - www.burrell.tech
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: error-pages
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - errors.k8s.burrell.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: main-site-error-pages
          port: 8080

---

apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: main-site-error-pages
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: main-site
  responseOverride:
    - match:
        statusCodes:
          - type: Value
            value: 404
      redirect:
        hostname: errors.k8s.burrell.tech
        path:
          type: ReplaceFullPath
          replaceFullPath: /404.html
        statusCode: 302
    - match:
        statusCodes:
          - type: Value
            value: 500
      redirect:
        hostname: errors.k8s.burrell.tech
        path:
          type: ReplaceFullPath
          replaceFullPath: /500.html
        statusCode: 302
    - match:
        statusCodes:
          - type: Value
            value: 502
      redirect:
        hostname: errors.k8s.burrell.tech
        path:
          type: ReplaceFullPath
          replaceFullPath: /502.html
        statusCode: 302
    - match:
        statusCodes:
          - type: Value
            value: 503
      redirect:
        hostname: errors.k8s.burrell.tech
        path:
          type: ReplaceFullPath
          replaceFullPath: /503.html
        statusCode: 302
    - match:
        statusCodes:
          - type: Value
            value: 504
      redirect:
        hostname: errors.k8s.burrell.tech
        path:
          type: ReplaceFullPath
          replaceFullPath: /504.html
        statusCode: 302
